JumpScript/tests/baselines/reference/symbolProperty39.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty39.jump(2,5): error TS2393: Duplicate function implementation.
tests/cases/conformance/es6/Symbols/symbolProperty39.jump(3,5): error TS2393: Duplicate function implementation.
tests/cases/conformance/es6/Symbols/symbolProperty39.jump(4,5): error TS2393: Duplicate function implementation.
tests/cases/conformance/es6/Symbols/symbolProperty39.jump(7,5): error TS2393: Duplicate function implementation.


==== tests/cases/conformance/es6/Symbols/symbolProperty39.jump (4 errors) ====
    class C {
        [Symbol.iterator](x: string): string;
        ~~~~~~~~~~~~~~~~~
!!! error TS2393: Duplicate function implementation.
        [Symbol.iterator](x: number): number;
        ~~~~~~~~~~~~~~~~~
!!! error TS2393: Duplicate function implementation.
        [Symbol.iterator](x: any) {
        ~~~~~~~~~~~~~~~~~
!!! error TS2393: Duplicate function implementation.
            return undefined;
        }
        [Symbol.iterator](x: any) {
        ~~~~~~~~~~~~~~~~~
!!! error TS2393: Duplicate function implementation.
            return undefined;
        }
    }